updated navigation, footer, about, membership, yoe

--- a/agenda.html
+++ b/agenda.html
@@ -16,9 +16,7 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img
-              src="images/EnterpriseNGRLogo.png"
-              alt="EnterpriseNGR_Logo" /></a
+            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
@@ -442,6 +440,9 @@
             </div>
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
+            </div>
+            <div class="item">
+              <a href=""><img src="images/linkedin.png" alt="" /></a>
             </div>
           </div>
         </div>
