--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </nav>
     </div> -->
     <nav>
-      <label class="logo"><a href="index.html"><img src="images/EnterpriseNGRLogo.png" alt="EnterpriseNGR_Logo"></a></label>
+      <label class="logo"><a href="index.html"><img src="images/logo1.png" alt="EnterpriseNGR_Logo"></a></label>
       <ul id="menu">
         <li><a href="about.html">About Us</a></li>
         <li><a href="agenda.html">Our Agenda</a></li>
@@ -377,6 +377,9 @@
           </div>
           <div class="item">
             <a href=""><img src="images/twitter.png" alt="" /></a>
+          </div>
+          <div class="item">
+            <a href=""><img src="images/linkedin.png" alt="" /></a>
           </div>
         </div>
       </div>
