--- a/member.html
+++ b/member.html
@@ -16,9 +16,7 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img
-              src="images/EnterpriseNGRLogo.png"
-              alt="EnterpriseNGR_Logo" /></a
+            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
@@ -47,23 +45,23 @@
       </div>
 
       <div class="economy_grid">
-        <div class="img">
+        <div class="img responsive">
           <img src="images/member001.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
           <div class="bold">
-            The Financial and Professional Services sector has the potential to
-            be the largest tax payer, largest employer, biggest exporting
-            industry and largest contributor to total economic output after
-            agriculture. The sector working in unison can help achieve this
-            goal.
+            We offer our members the opportunity to expand their business
+            priorities and partake in important policy debates that shape
+            economic growth. They also get to engage with policymakers and key
+            industry stakeholders domestically and internationally.
           </div>
           <div class="thin">
-            To succeed and attain its potential as the center for financial
-            services in Africa, the Financial and Professional Services sector
-            requires an enabling policy environment and collaborative
-            transformational growth effort.
+            Our members come from various sub-sectors of the Financial & related
+            Professional services sector which include Banking, Asset
+            Management, Capital Markets & Green Finance, Insurance, FinTech,
+            Professional Services (Law, Accountancy, Consulting), Islamic
+            Finance, and Business Process Outsourcing
           </div>
           <a href="about.html"
             ><button class="big_btn">
@@ -82,147 +80,162 @@
     </section>
 
     <section class="membership_category">
+      <div class="sm_heading">MEMBERSHIP BENEFITS</div>
       <div class="md_heading">We currently have 2 membership categories:</div>
-      <div class="grid">
-        <div>
-          <div>
-            <div class="md_heading">1.</div>
+
+      <div class="wrapper">
+        <div class="grid">
+          <div class="item">
             <div class="md_heading">Founding Members</div>
-            <div class="sm_heading">Pay a one-off seed fund contribution.</div>
-          </div>
-          <div>
-            <div class="md_heading">2.</div>
-            <div class="md_heading">Ordinary Members</div>
-            <div class="sm_heading">
-              Pay an annual subscription. The ordinary membership category is
-              further divided into Gold, Silver, and Bronze classes.
+            <div class="pricing">
+              <div class="sm_heading">₦100m One-off</div>
+            </div>
+            <div class="thin">
+              These are custodians of the EnterpriseNGR Vision and as such will
+              be given voting rights. They will be granted lifetime membership
+              as their future membership fees will be waived in view of their
+              seed fund contributions.
             </div>
           </div>
-          <div class="md_heading bottom">
-            Membership is open to all players in the FPS Sector.
+          <div class="item">
+            <div class="md_heading">Ordinary Members</div>
+            <div class="pricing">
+              <div class="sm_heading">GOLD (₦10m annually)</div>
+              <div class="sm_heading">SILVER (₦5m annually)</div>
+              <div class="sm_heading">BRONZE (₦1m annually)</div>
+            </div>
+            <div class="thin">
+              Institutions in the Nigerian financial and related professional
+              services sector who pay the annual membership fee. They shall have
+              rights to vote additional Board members.
+            </div>
           </div>
         </div>
-        <div>
-          <div>
-            <a href="news.html"
-              ><button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: black"
-                  data-width="26"
-                ></span>
-                <span class="btn_text">View All</span>
-              </button></a
-            >
-          </div>
-          <div class="img">
-            <img src="images/member002.png" alt="" />
-          </div>
+
+        <div class="btn_all">
+          <a href="about.html"
+            ><button class="big_btn all">
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+                data-height="26"
+              ></span>
+              <span class="btn_text">View All</span>
+            </button></a
+          >
         </div>
       </div>
     </section>
 
-    <section class="membership_benefit">
-      <div class="sm_heading">MEMBERSHIP BENEFITS</div>
-      <div class="md_heading">What you get as a member of EnterpriseNGR:</div>
-      <div>
-        <ul>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span>
-            <span class="text"
-              >As a member of EnterpriseNGR, your position will culminate into
-              membership of the governing body of the Company, led by an
-              Advisory Board which consists of a high-level representation of
-              industry leaders, relevant Government and Regulatory
-              institutions.</span
-            >
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span>
-            <span class="text"
-              >events provide members with the opportunity to interact with key
-              stakeholders and participate in key capacities to influence the
-              direction of the industry, regulation, and policy as it relates to
-              their businesses, sub-sectors, and the FPS sector in
-              general.</span
-            >
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span>
-            <span class="text"
-              >promote policies that ensure the long-term economic growth and
-              success of our members.</span
-            >
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span>
-            <span class="text"
-              >members enjoy brand positioning and associated benefits in
-              varying degrees based on their commitment and support for
-              EnterpriseNGR. Members and member organizations get recognition
-              during events and stakeholder engagements.</span
-            >
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span>
-            <span class="text"
-              >We care about the interests and aspirations of our members – and
-              we value and welcome their feedback gotten through an annual
-              membership survey.</span
-            >
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span>
-            <span class="text"
-              >engage in best governance practices and exhibit transparency with
-              the management of resources entrusted to EnterpriseNGR.</span
-            >
-          </li>
-        </ul>
+    <section class="promotion">
+      <div class="md_heading">
+        Membership is open to all players in the FPS Sector.
       </div>
-      <a href="http://enterprisengr.roundstone.solutions/login">
-        <button class="big_btn">
-          <span
-            class="iconify-inline"
-            data-icon="bi:arrow-right-circle"
-            style="color: #40ba7b"
-            data-width="29"
-            data-height="29"
-          ></span>
-          <span class="btn_text">Join Us</span>
-        </button></a
-      >
+    </section>
+
+    <section class="membership_benefits">
+      <div class="wrapper">
+        <div class="sm_heading">MEMBERSHIP BENEFITS</div>
+        <div class="md_heading">What you get as a member of EnterpriseNGR:</div>
+
+        <div class="grid">
+          <div class="item">
+            <div class="md_heading">Leadership and Governance</div>
+            <div class="thin">
+              Members have several opportunities to participate in the
+              governance leadership of the organisation. This includes via
+              involvement in various member committees on thematic issues in
+              Financial and Professional Services sector as well as other member
+              focused events and activities.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">Policy Consultation and Development</div>
+            <div class="thin">
+              Members have the opportunity to influence policy by engaging
+              government, policy makers and senior stakeholders on key issues
+              facing the Nigeria-based financial and professional services
+              industry and their customers.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">Events and Stakeholder Engagement</div>
+            <div class="thin">
+              EnterpriseNGR hosts events to engage with key stakeholders and
+              position the sector in line with its objective to be the Financial
+              Centre for Africa. Members have the opportunity to host and attend
+              EnterpriseNGR events in varying capacities.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">Recognition and Branding</div>
+            <div class="thin">
+              Members and member organizations are given recognition during
+              events and stakeholder engagements; members’ logo and / profile
+              are included in the member recognition page on the website and
+              communication platforms and materials.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">Consideration for Members’ Interests</div>
+            <div class="thin">
+              EnterpriseNGR will pursue interests and aspirations of members. An
+              annual membership survey will collate feedback on what members
+              consider most important within the broader set of EnterpriseNGR’s
+              focused areas.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">
+              Financial Management and Accountability
+            </div>
+            <div class="thin">
+              By engaging best governance practices, the management of
+              EnterpriseNGR will exercise prudential management of resources and
+              make available to members its annual financial statements.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">Individual Member Engagement</div>
+            <div class="thin">
+              Continuous engagements with members through a designated contact,
+              usually the directorate of corporate affairs. This avenue will
+              provide notifications and updates on EnterpriseNGR work and keep
+              them abreast on new developments on a regular basis.
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="md_heading">Opportunities for Businesses</div>
+            <div class="thin">
+              Member organizations with relevant competencies will be engaged to
+              implement EnterpriseNGR’s major projects, including national and
+              regional projects commissioned in partnership with global donor
+              agencies
+            </div>
+          </div>
+        </div>
+
+        <div class="btn">
+          <button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Join Us</span>
+          </button>
+        </div>
+      </div>
     </section>
 
     <section class="founding_members">
@@ -265,7 +278,13 @@
           <img src="images/img12.png" alt="partner_logo" />
         </div>
         <div class="image">
-          <img src="images/Investmentonelogo.png" alt="partner_logo" />
+          <img src="images/img13.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="images/img14.png" alt="partner_logo" />
+        </div>
+        <div class="image">
+          <img src="images/img15.png" alt="partner_logo" />
         </div>
       </div>
     </section>
@@ -277,23 +296,20 @@
         Join our network of members at the forefront of advancing the
         development and transformation of Nigeria.
       </div>
-      <div class="grid">
-        <div>
-          <div class="md_heading">1.</div>
-          <div class="md_heading">Call our Team via Email/Phone</div>
-        </div>
-        <div>
-          <div class="md_heading">2.</div>
-          <div class="md_heading">Learn More about Membership Options</div>
-        </div>
-        <div>
-          <div class="md_heading">3.</div>
-          <div class="md_heading">Become a Member and Enjoy Benefits.</div>
-        </div>
+      <div>
+        <button class="md_btn">
+          <span
+            class="iconify"
+            data-icon="bi:arrow-right-circle-fill"
+            style="color: #40ba7b"
+            data-width="26"
+          ></span
+          ><span class="btn_text">Join Us</span>
+        </button>
       </div>
     </section>
 
-    <div class="agenda_wrapper">
+    <div class="agenda_wrapper news">
       <section class="agenda_news">
         <div class="news">
           <div class="sm_heading">KEEP UP TO DATE</div>
@@ -457,6 +473,9 @@
             </div>
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
+            </div>
+            <div class="item">
+              <a href=""><img src="images/linkedin.png" alt="" /></a>
             </div>
           </div>
         </div>
