--- a/about.html
+++ b/about.html
@@ -16,9 +16,7 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img
-              src="images/EnterpriseNGRLogo.png"
-              alt="EnterpriseNGR_Logo" /></a
+            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
@@ -148,24 +146,28 @@
           <div class="md_heading">How We Started</div>
           <div class="thin">
             <p>
-              EnterpriseNGR was launched in October 2021 as an independent
-              professional policy and advocacy group with the aim of promoting
-              and advocating for the Financial and Professional Services (FPS)
-              sector of Nigeria.
+              EnterpriseNGR Professional Advocacy Group ltd/Gte
+              (“EnterpriseNGR”) was incorporated at the Corporate Affairs
+              Commission on 10 April 2018, as a company limited by guarantee.
+              After several years of ideation, the Company launched in October
+              2021 as an independent professional policy and advocacy group with
+              the aim of promoting and advocating for the Financial and
+              Professional Services (FPS) sector of Nigeria.
             </p>
             <br />
             <p>
-              Founded by some of the sector's key players, our focus is to
-              transform Nigeria into the premier financial services center in
-              Africa, improve financial literacy and inclusion, and
-              significantly impact the quality of life of Nigerians.
+              EnterpriseNGR was founded by some of the sector's key players; its
+              members comprise industry professionals from various subsectors of
+              the Nigerian FPS sector.
             </p>
             <br />
             <p>
-              We leverage the expertise of our members who are industry
-              professionals cutting across various subsectors of the Nigerian
-              FPS sector, to tap the country’s teeming economic potential in a
-              bid to develop a strong and resilient economy.
+              Our focus is to transform Nigeria into the premier financial
+              services center in Africa, improve financial literacy and
+              inclusion, and significantly impact the quality of life of
+              Nigerians. We leverage the expertise of our members to tap the
+              nation’s teeming economic potential in a bid to develop a strong
+              and resilient economy.
             </p>
           </div>
         </div>
@@ -176,137 +178,135 @@
       </div>
     </section>
 
-    <section class="economy">
-      <div class="economy_grid">
-        <div class="img history">
-          <img src="images/about3.png" alt="Economy" />
-        </div>
-
-        <div class="economy_description">
-          <div class="md_heading">Governance</div>
-          <div class="thin">
-            Members of our Advisory Board consists of a high-level
-            representation of industry leaders, and relevant Government and
-            Regulatory institutions.
-          </div>
-          <div class="thin">
-            These include the Central Bank of Nigeria, Ministry of Finance,
-            Leadership of relevant House Committees, National Pension
-            Commission, Securities and Exchange Commission, National Insurance
-            Commission, etc.
-          </div>
-          <div class="thin">
-            Some examples of committees where our members are involved are:
-          </div>
-
-          <ul class="arrow">
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text">International Trade Committee</span>
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text"
-                >G.10 Alliance (Exclusive Club of Top players in each
-                subsector)</span
-              >
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text"
-                >G.10 Alliance (Exclusive Club of Top players in each
-                subsector)</span
-              >
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text">Future of Finance Group</span>
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text">Legal Services Network</span>
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle-fill"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text">Research Network</span>
-            </li>
-          </ul>
-        </div>
+    <section class="mission_vision_value">
+      <div class="buttons">
+        <button class="mission_btn active">MISSION</button
+        ><button class="mission_btn">VISION</button
+        ><button class="mission_btn">VALUES</button>
+      </div>
+      <div class="thin mission_text show">
+        To be a leading voice and champion for the development and
+        transformation of Nigeria.
+      </div>
+      <div class="thin mission_text">
+        To advance Nigeria’s transformation as Africa’s premier financial
+        services centre
+      </div>
+      <div class="mission_text">
+        <ul>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Financial Inclusion.
+          </li>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Digitization.
+          </li>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Regionalization.
+          </li>
+        </ul>
       </div>
     </section>
 
-    <section class="board">
-      <div class="md_heading">Board of Directors</div>
-      <div class="number_cards">
-        <div>
-          <div class="sm_heading name">Aigboje Aig-Imoukhuede</div>
-          <div class="bold">Chairman</div>
-          <div class="thin">Tengen Family Office</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Obi Ibekwe</div>
-          <div class="bold">Chief Executive Officer</div>
-          <div class="thin">EnterpriseNGR</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Banjo Adegbohungbe</div>
-          <div class="bold">Director</div>
-          <div class="thin">Coronation Merchant Bank</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Bola Onadele Koko</div>
-          <div class="bold">Director</div>
-          <div class="thin">FMDQ Group</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Bolaji Balogun</div>
-          <div class="bold">Director</div>
-          <div class="thin">Chapelhill Denham</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Gbenga Oyebode</div>
-          <div class="bold">Director</div>
-          <div class="thin">Aluko & Oyebode</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Kayode Akinkugbe</div>
-          <div class="bold">Director</div>
-          <div class="thin">FBNQuest Merchant Bank</div>
-        </div>
-        <div>
-          <div class="sm_heading name">Oscar Onyema</div>
-          <div class="bold">Director</div>
-          <div class="thin">NGX Group</div>
+    <section class="latest_news team">
+      <div class="news">
+        <div class="news">
+          <div class="md_heading">Board of Directors</div>
+          <div class="thin">
+            EnterpriseNGR is led by a Board comprising seasoned industry
+            professionals with broad experience and expertise across various
+            sub-sectors of FPS.
+          </div>
+          <div class="cards">
+            <div class="card">
+              <div class="image">
+                <img src="images/aigboje.png" alt="" />
+              </div>
+              <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+              <div class="bold">Chairman</div>
+              <div class="bold">Tengen Family Office</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/ObiIbekwe.png" alt="Obi Ibekwe" />
+              </div>
+              <div class="sm_heading">Obi Ibekwe</div>
+              <div class="bold">Chief Executive Officer</div>
+              <div class="bold">EnterpriseNGR</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/banjo.png" alt="Banjo Adegbohungbe" />
+              </div>
+              <div class="sm_heading">Banjo Adegbohungbe</div>
+              <div class="bold">Director</div>
+              <div class="bold">Coronation Merchant Bank</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/bola.png" alt="Bola Onadele" />
+              </div>
+              <div class="sm_heading">Bola Onadele Koko</div>
+              <div class="bold">Director</div>
+              <div class="bold">FMDQ Group</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/bolaji.png" alt="Bolaji Balogun" />
+              </div>
+              <div class="sm_heading">Bolaji Balogun</div>
+              <div class="bold">Director</div>
+              <div class="bold">Chapelhill Denham</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/gbenga.png" alt="" />
+              </div>
+              <div class="sm_heading">Gbenga Oyebode</div>
+              <div class="bold">Director</div>
+              <div class="bold">Aluko & Oyebode</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/kayode.png" alt="" />
+              </div>
+              <div class="sm_heading">Kayode Akinkugbe</div>
+              <div class="bold">Director</div>
+              <div class="bold">FBNQuest Merchant Bank</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/oscar.png" alt="" />
+              </div>
+              <div class="sm_heading">Oscar Onyema</div>
+              <div class="bold">Director</div>
+              <div class="bold">NGX Group</div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -314,118 +314,71 @@
     <section class="latest_news team">
       <div class="news">
         <div class="news">
-          <div class="md_heading">Our Team</div>
+          <div class="md_heading">Management Team</div>
           <div class="thin">
-            EnterpriseNGR’s leadership team brings a broad scope of experience
-            and expertise to execute on our mission to drive initiatives to grow
-            Nigeria’s Financial and Professional Services sector.
+            The Management team, made up of well trained professionals, is agile
+            and dynamic and committed to a culture of execution excellence in
+            delivering on EnterpriseNGR’s mission.
           </div>
           <div class="cards">
             <div class="card">
               <div class="image">
                 <img src="images/ObiIbekwe.png" alt="" />
               </div>
-              <div class="sm_heading text">
-                Obi Ibekwe |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
-              </div>
-              <div class="bold text">Chief Executive Officer</div>
+              <div class="sm_heading">Obi Ibekwe</div>
+              <div class="bold">Chief Executive Officer</div>
             </div>
-            <div class="card">
-              <div class="image">
-                <img src="images/uchechiakinwale.png" alt="" />
-              </div>
-              <div class="sm_heading text">
-                Uchechi Oluwole-Akinwale |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
-              </div>
-              <div class="bold text">Head, Corporate Services</div>
-            </div>
+
             <div class="card">
               <div class="image">
                 <img src="images/lamiadekola.png" alt="" />
               </div>
-              <div class="sm_heading text">
-                Lami Adekola |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
+              <div class="sm_heading">Lami Adekola</div>
+              <div class="bold">Director, Policy & Public Affairs</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/uchechiakinwale.png" alt="" />
               </div>
-              <div class="bold text">Director, Policy & Public Affairs</div>
+              <div class="sm_heading">Uchechi Oluwole-Akinwale</div>
+              <div class="bold">Head, Corporate Services</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/sochiazuh.png" alt="" />
+              </div>
+              <div class="sm_heading">Sochi Azuh</div>
+              <div class="bold">Head, Corporate Communications & Branding</div>
+            </div>
+
+            <div class="card">
+              <div class="image">
+                <img src="images/tayomuritala.png" alt="" />
+              </div>
+              <div class="sm_heading">Tayo Muritala</div>
+              <div class="bold">Head, Research</div>
             </div>
 
             <div class="card">
               <div class="image">
                 <img src="images/ogennaife.png" alt="" />
               </div>
-              <div class="sm_heading text">
-                Oge Nnaife |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
-              </div>
-              <div class="bold text">Head of Programmes</div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="images/tayomuritala.png" alt="" />
-              </div>
-              <div class="sm_heading text">
-                Tayo Muritala |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
-              </div>
-              <div class="bold text">Head, Research</div>
-            </div>
-            <div class="card">
-              <div class="image">
-                <img src="images/sochiazuh.png" alt="" />
-              </div>
-              <div class="sm_heading text">
-                Sochi Azuh |
-                <a href=""
-                  ><span
-                    class="iconify-inline link"
-                    data-icon="logos:linkedin-icon"
-                    style="color: black"
-                    data-width="12"
-                  ></span
-                ></a>
-              </div>
-              <div class="bold text">Head, Corporate Comms & Branding</div>
+              <div class="sm_heading">Oge Nnaife</div>
+              <div class="bold">Head of Programmes</div>
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="advisory_council">
+      <div class="md_heading">Advisory Council</div>
+      <div class="thin">
+        EnterpriseNGR’s Advisory Council is the senior consultative forum of the
+        Company. The Advisory Council consists of a high-level representation of
+        industry leaders, and relevant Government and Regulatory institutions.
       </div>
     </section>
 
@@ -522,6 +475,9 @@
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
+            <div class="item">
+              <a href=""><img src="images/linkedin.png" alt="" /></a>
+            </div>
           </div>
         </div>
       </div>
@@ -532,5 +488,6 @@
     </footer>
     <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/about.js"></script>
   </body>
 </html>
