--- a/greenstart.html
+++ b/greenstart.html
@@ -16,9 +16,7 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img
-              src="images/EnterpriseNGRLogo.png"
-              alt="EnterpriseNGR_Logo" /></a
+            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
@@ -36,7 +34,7 @@
 
       <div class="landing_page">
         <div class="heading">Get your</div>
-        <div class="heading green">#GreenStart</div>
+        <div class="heading">#GreenStart</div>
         <p>This is the start of your journey to the career of your dreams.</p>
         <a href="http://enterprisengr.roundstone.solutions/login"
           ><button class="big_btn">
@@ -53,44 +51,73 @@
       </div>
     </header>
 
-    <section class="economy greenstart">
+    <section class="greenstart_ad">
       <div class="md_heading green">Ready to get your #GreenStart?</div>
-
-      <div class="economy_grid">
-        <div class="economy_description">
-          <div class="bold">
-            At no cost, YOE will equip you with employability skills, hands-on
-            training, and mentorship that will make you a star candidate for
-            recruitment into the financial and professional services sector.
-          </div>
-          <a href="http://enterprisengr.roundstone.solutions/login"
-            ><button class="big_btn">
-              <span
-                class="iconify-inline"
-                data-icon="bi:arrow-right-circle"
-                style="color: #40ba7b"
-                data-width="29"
-                data-height="29"
-              ></span>
-              <span class="btn_text">Sign Up Here</span>
-            </button></a
-          >
-        </div>
-
-        <div class="img">
-          <img src="images/yoe1.png" alt="Economy" />
-        </div>
+      <div class="bold">
+        YOE will make you a star candidate for recruitment into the financial
+        and professional services sector with the following:
+      </div>
+      <div>
+        <ul>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Employability Skills
+          </li>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Hands-on Training
+          </li>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Mentorship
+          </li>
+          <li>
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            >Zero Cost
+          </li>
+        </ul>
+      </div>
+      <div class="btn">
+        <a href="http://enterprisengr.roundstone.solutions/login"
+          ><button class="big_btn">
+            <span
+              class="iconify-inline"
+              data-icon="bi:arrow-right-circle"
+              style="color: #40ba7b"
+              data-width="29"
+              data-height="29"
+            ></span>
+            <span class="btn_text">Sign Up Here</span>
+          </button></a
+        >
       </div>
     </section>
 
     <section class="economy unemployment">
-      <div class="md_heading">Taming Unemployment</div>
       <div class="economy_grid">
-        <div class="img">
-          <img src="images/finewoman.png" alt="Economy" />
-        </div>
-
         <div class="economy_description">
+          <div class="md_heading">Taming Unemployment</div>
+
           <div class="bold">
             At EnterpriseNGR, we decided to not just point out the problem of
             unemployment, but to bring a solution to it. That is why we created
@@ -114,6 +141,61 @@
             with the YOE Internship Programme.
           </div>
         </div>
+
+        <div class="img">
+          <img src="images/finewoman.png" alt="Economy" />
+        </div>
+      </div>
+    </section>
+
+    <section class="economy approach">
+      <div class="economy_grid">
+        <div class="img">
+          <img src="images/greenstart001.png" alt="Economy" />
+        </div>
+
+        <div class="economy_description">
+          <div class="md_heading green">We are on a Mission.</div>
+          <div class="thin">
+            Youths of Enterprise (YOE) Internship Programme is one of
+            EnterpriseNGR’s immediate developmental initiatives that aims to
+            reverse the national youth unemployment and under-employment trends
+            as well as build capacity in the private sector.
+          </div>
+          <div class="thin">
+            The National Population Commission places Nigeria’s population at
+            about 220 million with 50% of the population comprising youths.
+            Unfortunately, over 38.5% of Nigerian youths remain unemployed and a
+            larger percentage are underemployed.
+          </div>
+          <div class="thin">
+            We seek to improve the employment and employability of Nigerian
+            youth within the Financial and Professional Services (“FPS”) sector
+            with the YOE Internship Programme.
+          </div>
+          <div class="btn">
+            <a href="http://enterprisengr.roundstone.solutions/login"
+              ><button class="big_btn">
+                <span
+                  class="iconify-inline"
+                  data-icon="bi:arrow-right-circle"
+                  style="color: #40ba7b"
+                  data-width="29"
+                  data-height="29"
+                ></span>
+                <span class="btn_text">Sign Up Here</span>
+              </button></a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="benefit">
+      <div class="md_heading">
+        Through the YOE Programme, EnterpriseNGR is playing a vital role in
+        facilitating capacity building in the private sector and contributing to
+        resolving the problem of unemployment in Nigeria.
       </div>
     </section>
 
@@ -121,77 +203,37 @@
       <section class="economy mission">
         <div class="economy_grid">
           <div class="economy_description">
-            <div class="md_heading green">We are on a Mission.</div>
+            <div class="md_heading green">Our Approach</div>
             <div class="thin">
-              Youths of Enterprise (YOE) Internship Programme is one of
-              EnterpriseNGR’s immediate developmental initiatives that aims to
-              reverse the national youth unemployment and under-employment
-              trends as well as build capacity in the private sector.
+              Through the YOE Programme, EnterpriseNGR is playing a vital role
+              in facilitating capacity building in the private sector and
+              contributing to resolving the problem of unemployment in Nigeria.
             </div>
             <div class="thin">
-              The National Population Commission places Nigeria’s population at
-              about 220 million with 50% of the population comprising youths.
-              Unfortunately, over 38.5% of Nigerian youths remain unemployed and
-              a larger percentage are underemployed.
+              Working with identified partners in the financial and professional
+              services sector, we will engage and recruit about 5,000 interns
+              who are graduates with not more than five years post-graduation
+              for placements to partner organizations.
             </div>
             <div class="thin">
-              We seek to improve the employment and employability of Nigerian
-              youth within the Financial and Professional Services (“FPS”)
-              sector with the YOE Internship Programme.
+              The Programme is designed to improve the skillsets, professional
+              competence, and employability of program participants while also
+              providing them with workplace experience.
             </div>
-            <a href="http://enterprisengr.roundstone.solutions/login"
-              ><button class="md_btn">
-                <span
-                  class="iconify"
-                  data-icon="bi:arrow-right-circle-fill"
-                  style="color: #40ba7b"
-                  data-width="26"
-                ></span
-                ><span class="btn_text">Sign Up Here</span>
-              </button></a
-            >
+            <div class="thin">
+              Following the envisaged success of the program, we aim to scale to
+              100,000 annually in five years
+            </div>
           </div>
 
           <div class="img">
-            <img src="images/greenstart001.png" alt="Economy" />
+            <img src="images/greenstart2.png" alt="Economy" />
           </div>
         </div>
       </section>
     </div>
 
-    <section class="economy approach">
-      <div class="economy_grid">
-        <div class="economy_description">
-          <div class="md_heading green">Our Approach</div>
-          <div class="bold">
-            Through the YOE Programme, EnterpriseNGR is playing a vital role in
-            facilitating capacity building in the private sector and
-            contributing to resolving the problem of unemployment in Nigeria.
-          </div>
-          <div class="thin">
-            Working with identified partners in the financial and professional
-            services sector, we will engage and recruit about 5,000 interns who
-            are graduates with not more than five years post-graduation for
-            placements to partner organizations.
-          </div>
-          <div class="thin">
-            The Programme is designed to improve the skillsets, professional
-            competence, and employability of program participants while also
-            providing them with workplace experience.
-          </div>
-          <div class="thin">
-            Following the envisaged success of the program, we aim to scale to
-            100,000 annually in five years
-          </div>
-        </div>
-
-        <div class="img">
-          <img src="images/greenstart2.png" alt="Economy" />
-        </div>
-      </div>
-    </section>
-
-    <div class="agenda_wrapper">
+    <div class="agenda_wrapper main">
       <section class="manifesto">
         <div class="sm_heading">OUR MANIFESTO</div>
         <div class="md_heading">YOE is EnterpriseNGR’s commitment to:</div>
@@ -274,8 +316,8 @@
               (both globally and in Nigeria) as well as policymakers at all
               levels of government.
             </div>
-            <button class="md_btn">
-              <a href="member.html">
+            <a href="greenstart.html"
+              ><button class="md_btn">
                 <span
                   class="iconify"
                   data-icon="bi:arrow-right-circle-fill"
@@ -283,8 +325,8 @@
                   data-width="26"
                 ></span
                 ><span class="btn_text">Learn More</span>
-              </a>
-            </button>
+              </button></a
+            >
           </div>
           <div class="green">
             <div>JOIN NOW</div>
@@ -334,6 +376,9 @@
             </div>
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
+            </div>
+            <div class="item">
+              <a href=""><img src="images/linkedin.png" alt="" /></a>
             </div>
           </div>
         </div>
