--- a/newsitem.html
+++ b/newsitem.html
@@ -267,6 +267,9 @@
             <div class="item">
               <a href=""><img src="images/twitter.png" alt="" /></a>
             </div>
+            <div class="item">
+              <a href=""><img src="images/linkedin.png" alt="" /></a>
+            </div>
           </div>
         </div>
       </div>
