--- a/about.html
+++ b/about.html
@@ -373,6 +373,336 @@
       </div>
     </section>
 
+    <div class="popup">
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/ObiIbekwe.png" alt="Obi Ibekwe" />
+          </div>
+          <div>
+            <div class="sm_heading">Obi Ibekwe</div>
+            <div class="bold">Chief Executive Officer</div>
+            <div class="bold">EnterpriseNGR</div>
+            <div class="thin">
+              Obi is the Chief Executive Officer of EnterpriseNGR. She has
+              extensive corporate level experience across various Financial and
+              Professional services sectors. Her last position before joining
+              EnterpriseNGR was as Executive Director at United Bank of Africa
+              from where she retired in 2016. She holds a Bachelor of Arts
+              degree in International Relations from Tufts University in
+              Medford, Massachusetts, USA, an MBA degree from the prestigious
+              Ross School of Business, University of Michigan, Ann Arbor, USA,
+              and a Law degree from the University of Lagos, Nigeria. She was
+              called to the Nigerian Bar in 1986.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/banjo.png" alt="Banjo Adegbohungbe" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/bola.png" alt="Bola Onadele Koko" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/bolaji.png" alt="Bolaji Balogun" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/gbenga.png" alt="Gbenga Oyebode" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/kayode.png" alt="Kayode Akinkugbe" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/oscar.png" alt="Oscar Onyema" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/ObiIbekwe.png" alt="Obi Ibekwe" />
+          </div>
+          <div>
+            <div class="sm_heading">Obi Ibekwe</div>
+            <div class="bold">Chief Executive Office</div>
+            <div class="thin">
+              Obi is the Chief Executive Officer of EnterpriseNGR. She has
+              extensive corporate level experience across various Financial and
+              Professional services sectors. Her last position before joining
+              EnterpriseNGR was as Executive Director at United Bank of Africa
+              from where she retired in 2016. She holds a Bachelor of Arts
+              degree in International Relations from Tufts University in
+              Medford, Massachusetts, USA, an MBA degree from the prestigious
+              Ross School of Business, University of Michigan, Ann Arbor, USA,
+              and a Law degree from the University of Lagos, Nigeria. She was
+              called to the Nigerian Bar in 1986.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+
+      <div class="popup_modal">
+        <div class="grid">
+          <div class="image">
+            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+          </div>
+          <div>
+            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="bold">Chairman</div>
+            <div class="bold">Tengen Family Office</div>
+            <div class="thin">
+              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
+              also currently serves as Chairman - Wapic Insurance Plc; and was a
+              former President, Nigeria Stock Exchange.
+            </div>
+          </div>
+        </div>
+        <div class="close_btn">
+          <button class="close_popup">Close</button>
+        </div>
+      </div>
+    </div>
+
     <section class="advisory_council">
       <div class="md_heading">Advisory Council</div>
       <div class="thin">
