--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,7 @@
       <nav>
         <label class="logo"
           ><a href="index.html"
-            ><img
-              src="images/EnterpriseNGRLogo.png"
-              alt="EnterpriseNGR_Logo" /></a
+            ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
