--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
           <li><a href="policy.html">Policy & Research</a></li>
           <li><a href="greenstart.html">Youth of Enterprise</a></li>
           <li><a href="news.html">Media & Events</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="contact.html" class="active">Contact Us</a></li>
         </ul>
         <label id="menu-icon">
           <i class="fas fa-bars"></i>
