--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             ><img src="images/logo1.png" alt="EnterpriseNGR_Logo" /></a
         ></label>
         <ul id="menu">
-          <li><a href="about.html">About Us</a></li>
+          <li><a href="about.html" class="active">About Us</a></li>
           <li><a href="agenda.html">Our Agenda</a></li>
           <li><a href="member.html">Membership</a></li>
           <li><a href="policy.html">Policy & Research</a></li>
