--- a/agenda.html
+++ b/agenda.html
@@ -20,7 +20,7 @@
         ></label>
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
-          <li><a href="agenda.html">Our Agenda</a></li>
+          <li><a href="agenda.html" class="active">Our Agenda</a></li>
           <li><a href="member.html">Membership</a></li>
           <li><a href="policy.html">Policy & Research</a></li>
           <li><a href="greenstart.html">Youth of Enterprise</a></li>
