--- a/greenstart.html
+++ b/greenstart.html
@@ -23,7 +23,9 @@
           <li><a href="agenda.html">Our Agenda</a></li>
           <li><a href="member.html">Membership</a></li>
           <li><a href="policy.html">Policy & Research</a></li>
-          <li><a href="greenstart.html">Youth of Enterprise</a></li>
+          <li>
+            <a href="greenstart.html" class="active">Youth of Enterprise</a>
+          </li>
           <li><a href="news.html">Media & Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
