--- a/member.html
+++ b/member.html
@@ -21,7 +21,7 @@
         <ul id="menu">
           <li><a href="about.html">About Us</a></li>
           <li><a href="agenda.html">Our Agenda</a></li>
-          <li><a href="member.html">Membership</a></li>
+          <li><a href="member.html" class="active">Membership</a></li>
           <li><a href="policy.html">Policy & Research</a></li>
           <li><a href="greenstart.html">Youth of Enterprise</a></li>
           <li><a href="news.html">Media & Events</a></li>
