--- a/policy.html
+++ b/policy.html
@@ -22,7 +22,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="agenda.html">Our Agenda</a></li>
           <li><a href="member.html">Membership</a></li>
-          <li><a href="policy.html">Policy & Research</a></li>
+          <li><a href="policy.html" class="active">Policy & Research</a></li>
           <li><a href="greenstart.html">Youth of Enterprise</a></li>
           <li><a href="news.html">Media & Events</a></li>
           <li><a href="contact.html">Contact Us</a></li>
