--- a/agenda.html
+++ b/agenda.html
@@ -45,7 +45,8 @@
       </div>
       <div class="md_heading">
         We aim to advance this agenda by actively collaborating with our
-        members, industry partners, and stakeholders.
+        members, industry partners, policymakers, regulators and other
+        stakeholders locally and internationally.
       </div>
 
       <div class="economy_grid">
@@ -55,9 +56,11 @@
 
         <div class="economy_description">
           <div class="bold">
-            We focus our activities on key areas that affect our members and
-            where our cross-sectoral remit allows us to make the greatest
-            impact. These are:
+            Our pursuit of recognizable success in all these areas will be
+            supported by strong and reliable research and data insights – all
+            aimed at supporting the growth of the Nigerian FPS sector and
+            positioning it as a leading financial centre in Africa and the
+            world.
           </div>
           <div>
             <ul>
@@ -143,8 +146,9 @@
           <div class="md_heading">1.</div>
           <div class="md_heading">Sustainability</div>
           <div>
-            Encourage the sector to marry environmental, social, and governance
-            (ESG) principles into their operations and investment philosophies.
+            Encourage the sector to integrate environmental, social, and
+            governance (ESG) principles into their operations and investment
+            philosophies
           </div>
         </div>
         <div>
@@ -178,7 +182,8 @@
           <div class="md_heading">Financial Inclusion</div>
           <div>
             Advocate for inclusive access to appropriate, affordable, and timely
-            financial products and services.
+            financial products and services, some of which include banking,
+            loan, equity insurance products, etc.
           </div>
         </div>
       </div>
@@ -208,30 +213,25 @@
     </section>
 
     <section class="action_words">
-      <div class="sm_heading">Our Action Plan</div>
-      <div class="md_heading">Putting Words to Action</div>
-      <div class="thin">
-        These are the tools we will deploy to succeed at our key focus areas and
-        achieve the mission and vision of EnterpriseNGR.
-      </div>
+      <div class="sm_heading">How We Work</div>
+      <div class="md_heading">Our Pathways to Impact</div>
 
       <div class="number_cards">
         <div>
           <div class="md_heading">1.</div>
           <div class="md_heading">Intervention</div>
           <div>
-            EnterpriseNGR will intervene in key sectors of the economy through
-            driving joint investment allocation, promoting investment, and
-            proprietary initiatives amongst others. To be the change agent for
-            the growth we are advocating for.
+            EnterpriseNGR directly intervenes in key sectors of the economy
+            through the coordination of joint investments in proprietary
+            initiatives to drive the change we are advocating for.
           </div>
         </div>
         <div>
           <div class="md_heading">2.</div>
           <div class="md_heading">Standards</div>
           <div>
-            We will advocate for the proactive adoption of the highest standards
-            in the FPS sector in line with global best practices.
+            We advocate for the proactive adoption of the highest standards in
+            the FPS sector in line with global best practices.
           </div>
         </div>
         <div>
@@ -246,20 +246,18 @@
           <div class="md_heading">4.</div>
           <div class="md_heading">Partnership</div>
           <div>
-            We will build strong partnerships with other associations within the
-            sector and international organizations to accelerate the achievement
-            of our objectives. Currently, we are establishing partnerships
-            across research, advocacy, and the Youth of Enterprise Internship
-            Program (YOE).
+            We build strong partnerships with key stakeholders in the private
+            and public sectors, locally and internationally, to achieve our
+            objectives across our priority areas.
           </div>
         </div>
         <div>
           <div class="md_heading">5.</div>
           <div class="md_heading">Research & Policy</div>
           <div>
-            Establish thought leadership through robust research and
-            publications, speaking at key industry events, and strategic media
-            appearances across key online and offline platforms.
+            We establish thought leadership and drive policy engagement,
+            programmes and initiatives through evidence-based research and data
+            insights.
           </div>
         </div>
         <div>
